  (PR #1926, fixes Issue #1841)
- Fixed bug causing operations between arrays of quantity scalars and quantity holding
  array resulting in incorrect units.
  (PR #1677)
- Fix LaTeX siuntix formatting when using non_int_type=decimal.Decimal.
- Added refractive index units.
  (PR #1816)
- Fix converting to offset units of higher dimension e.g. gauge pressure
  (PR #1949)
  

0.23 (2023-12-08)
-----------------

- Add _get_conversion_factor to registry with cache.
- Homogenize input and ouput of internal regitry functions to
  facility typing, subclassing and wrapping.
  (_yield_unit_triplets, )
- Generated downstream_status page to track the
  state of downstream projects.
- Improve typing annotation.
- Updated to flexparser 0.2.
- Faster wraps
  (PR #1862)
- Add codspeed github action.
- Move benchmarks to pytest-benchmarks.
- Support pytest on python 3.12 wrt Fraction formatting change
  (#1818)
- Fixed Transformation type protocol.
  (PR #1805, PR #1832)
- Documented to_preferred and created added an autoautoconvert_to_preferred registry option.
  (PR #1803)
- Enable Pint to parse uncertainty numbers.
  (See #1611, #1614)
- Optimize matplotlib unit conversion for Quantity arrays
  (PR #1819)
- Add numpy.linalg.norm implementation.
  (PR #1251)

0.22 (2023-05-25)
-----------------

- Drop Python 3.8 compatability following NEP-29.
- Drop NumPy < 1.21 following NEP-29.
- Improved typing experience.
- Migrated fully to pyproject.toml.
- Migrated to ruff.
- In order to make static typing possible as required by mypy
  and similar tools, the way to subclass the registry has been
  changed.
- Allow non-quantity atol parameters for isclose and allclose.
  (PR #1783)


0.21 (2023-05-01)
-----------------

- Add PEP621/631 support.
  (Issue #1647)
- Exposed matplotlib unit formatter (PR #1703)
- Fix error when when re-registering a formatter.
  (PR #1629)
- Add new SI prefixes: ronna-, ronto-, quetta-, quecto-.
  (PR #1652)