@@ -1179,6 +1179,13 @@ def test_issue1505():
     )  # unexpected fail (magnitude should be a decimal)
 
 
+def test_issue_1845():
+    ur = UnitRegistry(auto_reduce_dimensions=True, non_int_type=decimal.Decimal)
+    # before issue 1845 these inputs would have resulted in a TypeError
+    assert ur("km / h * m").units == ur.Quantity("meter ** 2 / hour")
+    assert ur("kW / min * W").units == ur.Quantity("watts ** 2 / minute")
+
+
 @pytest.mark.parametrize(
     "units,spec,expected",
     [
